feat: refactor endpoints to make them generic (#19)
* feat: refactor endpoints to make them more generic

* feat: add basic testing

* fix: linter
